--- a/src/Vistas/VistaLogin.form
+++ b/src/Vistas/VistaLogin.form
@@ -138,12 +138,12 @@
         <Component class="javax.swing.JLabel" name="jLabel5">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/imagenes/logo_iestpvillamaria_300.png"/>
+              <Image iconType="3" name="/imagenes/logo_limpieza300.png"/>
             </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="30" y="130" width="310" height="320"/>
+              <AbsoluteConstraints x="20" y="140" width="310" height="320"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -155,7 +155,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="0" y="0" width="700" height="120"/>
+              <AbsoluteConstraints x="0" y="0" width="700" height="130"/>
             </Constraint>
           </Constraints>
 
@@ -169,13 +169,13 @@
                   <Font name="Segoe UI" size="38" style="1"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="75" green="25" red="44" type="rgb"/>
+                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="IESTP &quot;VILLA MAR&#xcd;A&quot;"/>
+                <Property name="text" type="java.lang.String" value="LIMPIEZA INTEGRAL S.A.C"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="170" y="50" width="390" height="60"/>
+                  <AbsoluteConstraints x="120" y="60" width="500" height="60"/>
                 </Constraint>
               </Constraints>
             </Component>
